--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -10,5 +10,8 @@
   <%= @task.photo %>
 </p>
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
+<% if current_user.try(:admin?) %>
+  	<%= link_to 'Edit', edit_task_path(@task) %> |
+	<%= link_to 'Destroy', task_path, method: :delete, data: { confirm: 'Are you sure?' } %> |
+<% end %>
 <%= link_to 'Back', tasks_path %>
