--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -14,4 +14,5 @@
   	<%= link_to 'Edit', edit_task_path(@task) %> |
 	<%= link_to 'Destroy', task_path, method: :delete, data: { confirm: 'Are you sure?' } %> |
 <% end %>
+<%= link_to 'Destroy', task_path, method: :delete, data: { confirm: 'Are you sure?' } %>
 <%= link_to 'Back', tasks_path %>
