commit 11: task's users completed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+.container {
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+body {
+    background-color: #FFFCF2;
+}
