--- a/app/views/user_tasks/task_status.html.erb
+++ b/app/views/user_tasks/task_status.html.erb
@@ -8,7 +8,7 @@
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="<%= task.photo %>" alt="Card image cap">
         <div class="card-body">
-          <%= link_to task.title, task %>
+          <%= link_to task.title, task_list_path(task) %>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <!-- <a href="<% complete_task_path %>" class="btn btn-primary">Go somewhere</a> -->
           <%= button_to 'Completar Tarea', complete_task_path(task_id: task.id), :method => :post, class: "btn btn-danger"%>
@@ -26,7 +26,7 @@
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="<%= task.photo %>" alt="Card image cap">
         <div class="card-body">
-          <%= link_to task.title, task %>
+          <%= link_to task.title, task_list_path(task) %>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <!-- <a href="<% complete_task_path %>" class="btn btn-primary">Go somewhere</a> -->
           <%= link_to 'Marcar Como No Completada', remove_task_path(task_id: task.id), :method => :delete, class: "btn btn-primary" %>
