commit 12: ranking working

--- a/app/views/user_tasks/task_list.html.erb
+++ b/app/views/user_tasks/task_list.html.erb
@@ -1,24 +1,67 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listado de Usuarios que han completado esta tarea:</h1>
+<h1>Top Five: 5 primeros usuarios en completar esta tarea:</h1>
+<br>
 
 <div class="container">
   <div class="row ">
     <div class="col-md-6">
       <table class="table">
-        <% @task.users.each do |user| %>
+        <thead>
           <tr>
-            <td>
-                <div style="background-image: url(<%= user.user_photo %>);background-repeat: no-repeat;background-size: cover;background-position: center;width: 80px; height: 80px;border-radius: 50%;border: 2px solid #FFC148;">
-                </div>
-            </td>
-            <td><%= user.name %></td>
-            <td><%= user.email %></td>
+            <th colspan="1"></th>
+            <th>Nombre</th>
+            <th>Email</th>
+            <th>Fecha Término</th>
           </tr>
-        <% end %>
+        </thead>
+        <tbody>
+          <% @task5.each do |user_task| %>
+            <tr>
+              <td>
+                  <div style="background-image: url(<%= user_task.user.user_photo %>);background-repeat: no-repeat;background-size: cover;background-position: center;width: 80px; height: 80px;border-radius: 50%;border: 2px solid #FFC148;">
+                  </div>
+              </td>
+              <td><%= user_task.user.name %></td>
+              <td><%= user_task.user.email %></td>
+              <td><%= user_task.updated_at %></td>
+            </tr>
+          <% end %>
+        </tbody>
       </table>
     </div>
-
 </div>
 
+<br>
+
+<h1>Listado de usuarios que han completado esta tarea:</h1>
+<br>
+
+<div class="container">
+  <div class="row ">
+    <div class="col-md-6">
+      <table class="table">
+        <thead>
+          <tr>
+            <th colspan="1"></th>
+            <th>Nombre</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @task.users.each do |user| %>
+            <tr>
+              <td>
+                  <div style="background-image: url(<%= user.user_photo %>);background-repeat: no-repeat;background-size: cover;background-position: center;width: 80px; height: 80px;border-radius: 50%;border: 2px solid #FFC148;">
+                  </div>
+              </td>
+              <td><%= user.name %></td>
+              <td><%= user.email %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
 </div>
+
+
