--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,6 +12,12 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto">
+      <% if current_user.try(:admin?) %>
+        <li class="nav-item active">
+          <a class="nav-link" href="<%= new_task_path %>">Agregar Tarea <span class="sr-only">(current)</span></a>
+        </li>
+      <% end %>
+       <!--
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
@@ -21,6 +27,7 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Pricing</a>
       </li>
+    -->
       <li class="nav-item  active dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <% if user_signed_in? %>
