--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :title %>
+    <%= form.label :título %>
     <%= form.text_field :title %>
   </div>
 
   <div class="field">
-    <%= form.label :photo %>
+    <%= form.label :foto %>
     <%= form.text_field :photo %>
   </div>
 
