commit 14: description added to tasks

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -17,7 +17,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :foto %>
+    <%= form.label :descripción %>
+    <%= form.text_field :description %>
+  </div>
+
+
+  <div class="field">
+    <%= form.label :fotografía %>
     <%= form.text_field :photo %>
   </div>
 
