--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,7 +13,7 @@
           <% else %>
             <strong><%= task.title %></strong>
           <% end %>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text"><%= task.description %></p>
           <a href="<%= new_user_session_path %>" class="btn btn-primary">Completar tarea</a>
         </div>
       </div>
