--- a/app/views/user_tasks/task_status.html.erb
+++ b/app/views/user_tasks/task_status.html.erb
@@ -27,7 +27,7 @@
         <img class="card-img-top" src="<%= task.photo %>" alt="Card image cap">
         <div class="card-body">
           <%= link_to task.title, task_list_path(task) %>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text"><%= task.description %></p>
           <!-- <a href="<% complete_task_path %>" class="btn btn-primary">Go somewhere</a> -->
           <%= link_to 'Marcar Como No Completada', remove_task_path(task_id: task.id), :method => :delete, class: "btn btn-primary" %>
         </div>
